Responsiveness fix; now works on iPhone 5 and lower

--- a/static/css/new_timetable/new_timetable.css
+++ b/static/css/new_timetable/new_timetable.css
@@ -673,6 +673,7 @@ input.cmn-toggle-round:checked + label:after {
   top:58px;
   right:-30px;
   border:1px solid #143B63;
+  border-radius:3px;
   color:#fff;
 }
 .copy-text {
